--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 	<name>Hello World Web Application Repository</name>
 	<description>Simplest possible Java Webapp</description>
 	<properties>
- 		 <sonar.projectKey>cndacademy_hello-world-war</sonar.projectKey>
- 		 <sonar.organization>cndacademy</sonar.organization>
- 		 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
- 		 <sonar.login>0829daee34fb2c86607d80c7cf0621f537bdc19c</sonar.login>
+ 	<sonar.projectKey>Akshatavk_hello-world-war</sonar.projectKey>
+ 	 <sonar.organization>akshatavk</sonar.organization>
+  	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  	<sonar.login>6f61a7793a053ec1b2de9096ff67f7ed885c9d4f</sonar.login>
 	</properties>
 
 	<build>
